fix: [EC-102] fix z-index of tooltip, because it must hide under header

--- a/src/styles/globalStyle.scss
+++ b/src/styles/globalStyle.scss
@@ -50,4 +50,8 @@ body {
         min-width: 0;
         margin: 0 10px 0 0;
     }
+
+    [class*='MuiTooltip-popper'] {
+        z-index: 195;
+    }
 }
